k8s/ch3/deployment-with-config.yaml
# deployment-with-config.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ch2app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-ch2app
  template:
    metadata:
      labels:
        app: my-ch2app
    spec:
      containers:
        - name: my-ch2app
          image: l7bug/k8s-java-demo:0.0.3-SNAPSHOT
          ports:
            - containerPort: 8080
          resources: # 限制资源（后面第4章详细讲）
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: my-ch2app-service
spec:
  type: NodePort
  selector:
    app: my-ch2app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
